# haraka-engine

./: .gitignore  CMakeLists.txt
include/client/: client_controller.hpp
include/core/: action.hpp  engine.hpp  events.hpp  exception.hpp  game_object.hpp  game_object_old.hpp  game_object_snapshot.hpp  gameinstance.hpp  player.hpp  snapshot.hpp  teams.hpp  types.hpp  types_snapshot.hpp  world.hpp  world_old.hpp
include/core/serialization/: action_serialization.proto  object_serialization.proto
include/graphics/: draw_instance.hpp  window.hpp
include/net/: client.hpp  packet.hpp  server.hpp  session.hpp  tsdeque.hpp
include/server/: packet_types.hpp  server_controller.hpp  session_info.hpp
include/server/serialization/: server_serialization.proto
include/util/: tsdeque.hpp
sources/: CMakeLists.txt
sources/client/: client_controller.cpp
sources/core/: action.cpp  engine.cpp  events.cpp  exception.cpp  game_object.cpp  game_object_old.cpp  game_object_snapshot.cpp  gameinstance.cpp  player.cpp  snapshot.cpp  teams.cpp  types.cpp  types_old.cpp  types_snapshot.cpp  world.cpp  world_old.cpp
sources/game/: game.cpp
sources/graphics/: draw_instance.cpp  window.cpp
sources/net/: client.cpp  packet.cpp  server.cpp  session.cpp  tsdeque.cpp
sources/server/: packet_types.cpp  server_controller.cpp  session_info.cpp
sources/util/: tsdeque.cpp
test/: CMakeLists.txt
test/core/: test_action.cpp  test_gameinstance.cpp  test_objects.cpp  test_snapshots.cpp  test_types.cpp
test/net/: test_server.cpp
test/net/protobufs/: dummy_packets.pb.cc  dummy_packets.pb.h  dummy_packets.proto
test/server_client/: test_server_client.cpp
test/tutorials/: boost_asio_core.cpp  boost_asio_tcp.cpp  google_protobufs.cpp
test/tutorials/protobufs/: .pb.cc  .pb.h  connection.pb.cc  connection.pb.h  connection.proto
